# stepper_tmc2209uart

./: Cargo.toml  LICENSE  LICENSE.md  README.md
documentation/: platform-support.md
src/: driver.rs  implementation.rs  lib.rs  reg_processor.rs  structures.rs  tmc2209_driver.rs  traits.rs  utils.rs
src/implementation/: base_config.rs  config.rs  driver.rs  init.rs  mod.rs  registers_collection.rs  saved_config.rs  stepper_base_api.rs
src/implementation/tmc2209_uart_impl/: config_read_write_methods.rs  mod.rs  reg_processor.rs  tmc2209_uart_controll.rs  tmc2209_uart_impl.rs
src/structures/: base_config.rs  config.rs  debug_readed_config.rs  driver.rs  mod.rs  registers_collection.rs  saved_config.rs
src/tmc2209_driver/: read_write_config_registers.rs  tmc2209_impl.rs  tmc2209_traits.rs
src/traits/: mod.rs  tmc2209_uart_traits.rs
src/utils/: calc.rs  mod.rs  tmc_read_write.rs
